--- a/css/style.css
+++ b/css/style.css
@@ -75,63 +75,66 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------*/
-:root {
-  --color-1: #ff3f40;
-  --color-2: #313030;
-}
-
 .container {
   max-width: 1250px;
   margin: 0 auto;
   padding: 0 15px;
-  position: relative;
 }
 
-* {
+body {
   font-family: "Open Sans", sans-serif;
 }
 
 header {
   width: 100%;
+  padding-top: 30px;
+  background-color: #f2f6f2;
+}
+header .container .header-wrapper {
+  width: 100%;
   margin: 0 auto;
-  background-color: var(--color-2);
-  position: fixed;
-  z-index: 1;
+  background-color: #313030;
+  padding: 40px 0 40px;
 }
 header .container .header-wrapper nav ul {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-header .container .header-wrapper nav ul li {
+header .container .header-wrapper nav ul li a {
   color: white;
   font-weight: bold;
-  font-size: 14px;
-  padding: 45px 30px 35px;
+  font-size: 13px;
+  padding: 38px 45px 38px;
 }
-header .container .header-wrapper nav ul li:hover {
-  background-color: var(--color-1);
+header .container .header-wrapper nav ul li a:hover {
+  background-color: #ff3f40;
   transition: 0.5s;
 }
 
 .background {
-  background-color: #f6f2f2;
+  background-color: #f2f6f2;
   width: 100%;
-  padding-top: 94px;
 }
 .background .home_block {
   width: 100%;
   display: flex;
   padding: 100px 0;
+  margin-bottom: 100px;
 }
 .background .home_block .home_left {
   width: 50%;
-  padding-right: 15px;
+  padding-right: 30px;
 }
 .background .home_block .home_left h1 {
-  font-size: 60px;
+  font-size: 50px;
   font-weight: 800;
+  line-height: 60px;
+  letter-spacing: 4px;
   margin-bottom: 35px;
+}
+.background .home_block .home_left h1 span {
+  letter-spacing: 9px;
 }
 .background .home_block .home_left p {
   font-size: 16px;
@@ -144,9 +147,9 @@ header .container .header-wrapper nav ul li:hover {
   color: white;
   font-size: 18px;
   font-weight: bold;
-  padding: 18px 65px;
+  padding: 13px 62px;
   border: 2px solid #ff3f40;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 .background .home_block .home_left .contact-us-btn:hover {
   background-color: white;
@@ -155,22 +158,29 @@ header .container .header-wrapper nav ul li:hover {
 }
 .background .home_block .home_right {
   width: 50%;
+  height: 356px;
   box-shadow: -1px -14px 24px 3px rgba(106, 109, 107, 0.82);
+}
+.background .home_block .home_right iframe {
+  width: 100%;
+  height: 100%;
 }
 
 .services_block {
   width: 100%;
   display: flex;
-  padding: 100px 0;
   border-bottom: 2px solid #bdb8b8;
+  padding-bottom: 70px;
 }
 .services_block .services_left {
   width: 50%;
-  padding-right: 15px;
+  padding-right: 80px;
 }
 .services_block .services_left h2 {
-  font-weight: 600;
+  font-weight: 700;
   font-size: 42px;
+  line-height: 50px;
+  color: #333333;
   margin-bottom: 45px;
 }
 .services_block .services_left p {
@@ -184,9 +194,9 @@ header .container .header-wrapper nav ul li:hover {
   color: #ff3f40;
   font-size: 18px;
   font-weight: bold;
-  padding: 18px 65px;
+  padding: 13px 62px;
   border: 2px solid #ff3f40;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 .services_block .services_left .learn-more-btn:hover {
   background-color: #ff3f40;
@@ -200,8 +210,7 @@ header .container .header-wrapper nav ul li:hover {
 }
 .services_block .services_right div {
   width: 50%;
-  padding-right: 30px;
-  margin-bottom: 30px;
+  padding: 0 30px 30px 0;
 }
 .services_block .services_right div img {
   margin-bottom: 30px;
@@ -209,6 +218,7 @@ header .container .header-wrapper nav ul li:hover {
 .services_block .services_right div h3 {
   font-weight: 700;
   font-size: 24px;
+  color: #4c4c4c;
   margin-bottom: 20px;
 }
 .services_block .services_right div p {
@@ -225,10 +235,12 @@ header .container .header-wrapper nav ul li:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 80px;
 }
 .products_block .products-article h2 {
-  font-weight: 600;
+  font-weight: 700;
   font-size: 42px;
+  color: #4c4c4c;
   margin-bottom: 35px;
   text-align: center;
 }
@@ -239,10 +251,9 @@ header .container .header-wrapper nav ul li:hover {
   text-align: center;
 }
 .products_block .products-article .line {
-  width: 10.35%;
+  width: 130px;
   padding-top: 25px;
-  border-bottom: 2px solid var(--color-1);
-  margin-bottom: 80px;
+  border-bottom: 2px solid #ff3f40;
 }
 .products_block .menu ul {
   display: flex;
@@ -254,10 +265,10 @@ header .container .header-wrapper nav ul li:hover {
   font-size: 22px;
 }
 .products_block .menu ul li a {
-  color: black;
+  color: #4c4c4c;
 }
 .products_block .menu ul li a:hover {
-  color: var(--color-1);
+  color: #ff3f40;
   transition: 0.2s;
 }
 .products_block .menu ul li:not(:last-child) {
@@ -268,8 +279,12 @@ header .container .header-wrapper nav ul li:hover {
   justify-content: space-between;
   flex-wrap: wrap;
 }
+.products_block .products-photo div {
+  width: 25%;
+}
 .products_block .products-photo div img {
-  width: 290px;
+  width: 100%;
+  padding: 0 10px;
   margin-bottom: 20px;
 }
 
