--- a/scss/common/common.scss
+++ b/scss/common/common.scss
@@ -1,10 +1,10 @@
 .container {
-    max-width: 1250px;
+    max-width: $container-width;
     margin: 0 auto;
     padding: 0 15px;
-    position: relative;
+    
 }
 
-* {
+body {
 font-family: 'Open Sans', sans-serif;
 }
