--- a/scss/components/_home_block/home_block.scss
+++ b/scss/components/_home_block/home_block.scss
@@ -1,42 +1,45 @@
 .background {
-    background-color: #f6f2f2;
+    background-color: $background-color;
     width: 100%; 
-    padding-top: 94px;
+    
     
     .home_block {
         width: 100%;
         display: flex;
         padding: 100px 0;
+        margin-bottom: 100px;
       
             .home_left {
             width: 50%;
-            padding-right: 15px;
+            padding-right: 30px;
             
             h1 {
-                font-size: 60px;
+                font-size: 50px;
                 font-weight: 800;
+                line-height: 60px;
+                letter-spacing: 4px;
                 margin-bottom: 35px;
+
+                span {
+                    letter-spacing: 9px;
+                }
             }
             p {
-                font-size: 16px;
+                font-size: $paragraph-font-size;
                 font-weight: 400;
-                line-height: 30px;
+                line-height: $paragraph-line-height;
                 margin-bottom: 60px;
             }
             .contact-us-btn {
                 @include button(#ff3f40, white);
-                // background-color: #ff3f40;
-                // color: white;
                 font-size: 18px;
                 font-weight: bold;
-                padding: 18px 65px;
+                padding: 13px 62px;
                 border: 2px solid #ff3f40;
-                border-radius: 10px;
+                border-radius: 5px;
 
                 &:hover {
                     @include button(white, #ff3f40);
-                    // background-color: white;
-                    // color: #ff3f40;
                     transition: 0.5s;
                 }
             }
@@ -44,7 +47,13 @@
 
         .home_right {
             width: 50%;
+            height: 356px;
             box-shadow: -1px -14px 24px 3px rgba(106, 109, 107, 0.82);
+            
+            iframe {
+                 width: 100%;
+                 height: 100%;
+            }
         }
     }   
-}
+} 
