--- a/scss/components/_products_block/products_block.scss
+++ b/scss/components/_products_block/products_block.scss
@@ -6,26 +6,28 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 80px;
 
         h2 {
-            font-weight: 600;
+            font-weight: 700;
             font-size: 42px;
+            color: #4c4c4c;
             margin-bottom: 35px;
             text-align: center;
         }
 
         p {
             font-weight: 400;
-            font-size: 16px;
-            line-height: 30px;
+            font-size: $paragraph-font-size;
+            line-height: $paragraph-line-height;
             text-align: center;
         }
 
         .line {
-            width: 10.35%;
+            width: $underline-width;
             padding-top: 25px;
-            border-bottom: 2px solid var(--color-1);
-            margin-bottom: 80px;
+            border-bottom: 2px solid $color-1;
+            
         }
     }
 
@@ -37,10 +39,11 @@
         li {
             font-weight: 700;
             font-size: 22px;
+            
              a {
-                color: black;
+                color: #4c4c4c;
                 &:hover {
-                    color: var(--color-1);
+                    color: $color-1;
                     transition: 0.2s;
                 }
              }
@@ -56,11 +59,14 @@
         justify-content: space-between;
         flex-wrap: wrap;
 
-        div img {
-            width: 290px; //???
-            margin-bottom: 20px;
-
-        }
+        div {
+            width: $products-div-width;
+            img {
+                width: 100%; 
+                padding: 0 10px;
+                margin-bottom: 20px;
+            }
+        }    
     }
 }
 
