--- a/scss/components/_services_block/services_block.scss
+++ b/scss/components/_services_block/services_block.scss
@@ -2,40 +2,38 @@
 .services_block {
     width: 100%;
     display: flex;
-    padding: 100px 0;
     border-bottom: 2px solid #bdb8b8;
+    padding-bottom: 70px;
     
     .services_left {
         width: 50%;
-        padding-right: 15px;
+        padding-right: 80px;
 
         h2 {
-            font-weight: 600;
+            font-weight: 700;
             font-size: 42px;
+            line-height: 50px;
+            color: #333333;
             margin-bottom: 45px;
         }
 
         p {
             font-weight: 400;
-            font-size: 16px;
-            line-height: 30px;
+            font-size: $paragraph-font-size;
+            line-height: $paragraph-line-height;
             margin-bottom: 55px;
         }
 
         .learn-more-btn {
             @include button(white, #ff3f40);
-            // background-color: white;
-            // color: #ff3f40;
             font-size: 18px;
             font-weight: bold;
-            padding: 18px 65px;
+            padding: 13px 62px;
             border: 2px solid #ff3f40;
-            border-radius: 10px;
+            border-radius: 5px;
 
             &:hover {
                 @include button(#ff3f40, white);
-                // background-color: #ff3f40;
-                // color: white;
                 transition: 0.5s;
             }
         }   
@@ -48,8 +46,8 @@
 
         div {
             width: 50%;
-            padding-right: 30px;
-            margin-bottom: 30px;
+            padding: 0 30px 30px 0;
+            
 
             img {
                 margin-bottom: 30px;
@@ -58,13 +56,15 @@
             h3 {
                 font-weight: 700;
                 font-size: 24px;
+                color: #4c4c4c;
                 margin-bottom: 20px;
             }
 
             p {
                 font-weight: 400;
-                font-size: 16px;
-                line-height: 30px;
+                font-size: $paragraph-font-size;
+                line-height: $paragraph-line-height;
+                
             }
         }
     }
